[package]
name = "drawbridge"
version = "0.4.1"
authors = ["Profian Inc"]
edition = "2021"
license = "AGPL-3.0-or-later"
homepage = "https://github.com/profianinc/drawbridge"
repository = "https://github.com/profianinc/drawbridge"
description = "Drawbridge library."
keywords = ["drawbridge"]

[workspace]
members = [
    "crates/byte",
    "crates/client",
    "crates/jose",
    "crates/server",
    "crates/type",
]

[workspace.dependencies]
# Internal dependencies
drawbridge-byte = { path = "./crates/byte", version = "0.4.0" }
drawbridge-client = { path = "./crates/client", version = "0.4.1" }
drawbridge-jose = { path = "./crates/jose", version = "0.4.0" }
drawbridge-server = { path = "./crates/server", version = "0.4.0" }
drawbridge-type = { path = "./crates/type", version = "0.4.1" }

# External dependencies
anyhow = { version = "1.0.68", default-features = false }
async-h1 = { version = "2.3.3", default-features = false }
async-std = { version = "1.11.0", default-features = false }
axum = { version = "0.5.17", default-features = false }
base64 = { version = "0.21.0", default-features = false }
camino = { version = "1.1.2", default-features = false }
cap-async-std = { version = "0.24.4", default-features = true, features = ["fs_utf8"] }
clap = { version = "4.1.4", default-features = false, features = ["derive", "error-context", "help", "std", "usage", "wrap_help"] }
confargs = { version = "0.1.3", default-features = false }
futures = { version = "0.3.21", default-features = false }
futures-rustls = { version = "0.22.1", default-features = false }
headers = { version = "0.3.7", default-features = false }
http = { version = "0.2.6", default-features = false }
http-types = { version = "2.12.0", default-features = false }
hyper = { version = "0.14.23", default-features = false }
jsonwebtoken = { version = "8.2.0", default-features = false }
mediatype = { version = "0.19.13", default-features = false }
mime = { version = "0.3.16", default-features = false }
once_cell = { version = "1.17.0", default-features = false }
openidconnect = { version = "2.5.0", default-features = false }
rand = { version = "0.8.5", default-features = false }
rsa = { version = "0.7.2", default-features = false }
rustls = { version = "0.20.8", default-features = false }
rustls-pemfile = { version = "1.0.2", default-features = false }
semver = { version = "1.0.16", default-features = false }
serde = { version = "1.0.152", default-features = false }
serde_json = { version = "1.0.91", default-features = false }
sha2 = { version = "0.10.2", default-features = false }
tempfile = { version = "3.3.0", default-features = false }
tokio-util = { version = "0.7.3", default-features = false }
tower = { version = "0.4.12", default-features = false }
tower-http = { version = "0.3.5", default-features = false }
tracing = { version = "0.1.37", default-features = false, features = ["release_max_level_debug"] }
tracing-subscriber = { version = "0.3.11", default-features = false, features = ["ansi", "env-filter", "std", "tracing-log", "json"] }
ureq = { version = "2.6.2", default-features = false }
url = { version = "2.2.2", default-features = false }
uuid = { version = "1.2.2", default-features = false, features = ["v4"] }
walkdir = { version = "2.3.2", default-features = false }
webpki-roots = { version = "0.22.6", default-features = false }
zeroize = { version = "1.5.5", default-features = false }

[dependencies]
# Internal dependencies
drawbridge-byte = { workspace = true }
drawbridge-client = { workspace = true, optional = true }
drawbridge-jose = { workspace = true }
drawbridge-server = { workspace = true }
drawbridge-type = { workspace = true, features = ["server"] }

# External dependencies
anyhow = { workspace = true }
async-std = { workspace = true, features = ["attributes"] }
clap = { workspace = true }
confargs = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
# Internal dependencies
drawbridge-client = { workspace = true }

# External dependencies
async-h1 = { workspace = true }
async-std = { workspace = true, features = ["attributes", "default"] }
http-types = { workspace = true }
jsonwebtoken = { workspace = true }
openidconnect = { workspace = true }
rand = { workspace = true }
rsa = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["std"] }
tempfile = { workspace = true }

[features]
client = ["drawbridge-client"]
