[package]
name = "drawbridge-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
drawbridge-common = { path = "../common" }
clap = { version = "3", features = ["derive"] }
reqwest = { version = "0.11", default-features = false, features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
open = "2"
rpassword = "5"
directories = "4"
