[package]
name = "drawbridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
drawbridge-common = { path = "../common" }
clap = { version = "3", features = ["derive"] }
axum = { version = "0.4", features = ["headers"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
oauth2 = "4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["json"] }
headers = "0.3"
http = "0.2"
rsa = "0.5"
rand = "0.8"
bincode = "1"
base64 = "0.13"
anyhow = "1"

[dev-dependencies]
hyper = "0.14"
tower = "0.4"
regex = "1"
tokio-test = "0.4"
