[package]
name = "drawbridge-app"
version = "0.1.0"
authors = ["Profian Inc"]
edition = "2021"

[dependencies]
# Internal dependencies
drawbridge-auth = { path = "../auth" }
drawbridge-jose = { path = "../jose" }
drawbridge-type = { path = "../type", features = ["server"] }

# External dependencies
anyhow = { version = "1.0.57", default-features = false, features = ["std"] }
axum = { version = "0.5.4", default-features = false, features = ["json"] }
camino = { version = "1.0.9", default-features = false }
cap-async-std = { version = "0.24.4", default-features = true, features = ["fs_utf8"] }
futures = { version = "0.3.21", default-features = false, features = ["async-await"] }
futures-util = {  version = "0.3.21", default-features = false }
hyper = { version = "0.14.19", default-features = false }
mime = { version = "0.3.16", default-features = false }
rustls-pemfile = { version = "1.0.0", default-features = false }
serde = { version = "1.0.136", default-features = false }
serde_json = { version = "1.0.79", default-features = false, features = ["std"] }
tokio = { version = "1.17.0", default-features = false }
tokio-rustls = { version = "0.23", default-features = false }
tower = { version = "0.4.12", default-features = false, features = ["make"] }

[dev-dependencies]
# Internal dependencies
drawbridge-test-helper = { path = "../test-helper", default-features = false }

# External dependencies
bytes = { version = "1.1.0", default-features = false }
rcgen = { version = "0.9.2", default-features = false, features = ["pem"] }
reqwest = { version = "0.11.10", default-features = false, features = ["json", "rustls-tls"] }
tempfile = { version = "3.3.0", default-features = false }
tokio = { version = "1.17.0", default-features = false, features = ["macros", "rt"] }
