[package]
name = "drawbridge-auth"
version = "0.1.0"
authors = ["Profian Inc"]
edition = "2021"

[dependencies]
# Internal dependencies
# External dependencies
axum = { version = "0.5.0", default-features = false, features = ["headers", "query"] }
base64 = { version = "0.13", default-features = false }
bincode = { version = "1", default-features = true }
oauth2 = { version = "4.1", default-features = false, features = ["reqwest"] }
rand = { version = "0.8", default-features = false }
# TODO: migrate back to ureq because reqwest doesn't work in enarx: https://github.com/profianinc/drawbridge/issues/121
reqwest = { version = "0.11", default-features = false }
rsa = { version = "0.6", default-features = false }
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false }

[dev-dependencies]
hyper = { version = "0.14", default-features = false }
regex = { version = "1", default-features = false, features = ["std"] }
tokio = { version = "1.8.0", default-features = false }
tokio-test = { version = "0.4", default-features = false }
tower = { version = "0.4", default-features = false }

[features]
integration-tests = []
