[package]
name = "drawbridge-auth"
version = "0.1.0"
authors = ["Profian Inc"]
edition = "2021"

[dependencies]
# Internal dependencies
# External dependencies
axum = { version = "0.5.4", default-features = false, features = ["headers", "query"] }
base64 = { version = "0.13", default-features = false }
bincode = { version = "1", default-features = true }
oauth2 = { version = "4.1", default-features = false, features = ["ureq"] }
rand = { version = "0.8", default-features = false }
rsa = { version = "0.6", default-features = false }
serde = { version = "1.0.136", default-features = false }
serde_json = { version = "1.0.79", default-features = false }
ureq = { version = "2.4.0", default-features = false, features = ["json", "tls"] }

[dev-dependencies]
hyper = { version = "0.14.18", default-features = false }
regex = { version = "1", default-features = false, features = ["std"] }
tokio = { version = "1.17.0", default-features = false, features = ["macros", "rt"] }
tower = { version = "0.4.12", default-features = false }

[features]
integration-tests = []
