[package]
name = "drawbridge-byte"
version = "0.2.0"
authors = ["Profian Inc"]
edition = "2021"
license = "AGPL-3.0-or-later"
homepage = "https://github.com/profianinc/drawbridge"
repository = "https://github.com/profianinc/drawbridge"
description = "Utilities for working with contiguous arrays of bytes and easy conversions to and from Base64 representations in string contexts."
keywords = ["drawbridge", "base64"]
categories = [ "no-std" ]

[dependencies]
base64 = { version = "0.13.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.147", default-features = false, optional = true }

[features]
alloc = ["serde?/alloc"]
std = ["serde?/std"]
