[package]
name = "drawbridge-byte"
version = "0.4.0"
authors = ["Profian Inc"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/enarx/drawbridge"
repository = "https://github.com/enarx/drawbridge"
description = "Utilities for working with contiguous arrays of bytes and easy conversions to and from Base64 representations in string contexts."
keywords = ["drawbridge", "base64"]
categories = [ "no-std" ]

[dependencies]
base64 = { workspace = true, features = ["alloc"] }
serde = { workspace = true, optional = true }

[features]
alloc = ["serde?/alloc"]
std = ["serde?/std"]
