[package]
name = "drawbridge-client"
version = "0.2.4"
authors = ["Profian Inc"]
edition = "2021"
license = "AGPL-3.0-or-later"
homepage = "https://github.com/profianinc/drawbridge"
repository = "https://github.com/profianinc/drawbridge"
description = "Client library for interacting with the Drawbridge."
keywords = ["drawbridge"]

[dependencies]
# Internal dependencies
drawbridge-jose = { path = "../jose", version = "0.2.0" }
drawbridge-type = { path = "../type", version = "0.2.2" }

# External dependencies
anyhow = { version = "1.0", default-features = false, features = ["std"] }
http = { version = "0.2.6", default-features = false }
mime = { version = "0.3.16", default-features = false }
rustls = { version = "0.20.6", default-features = false }
serde_json = { version = "1.0.87", default-features = false, features = ["std"] }
ureq = { version = "2.4.0", default-features = false, features = ["json", "tls"] }
url = { version = "2.2.2", default-features = false, features = ["serde"] }
webpki-roots = { version = "0.22.3", default-features = false }
