[package]
name = "drawbridge-client"
version = "0.4.1"
authors = ["Profian Inc"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/profianinc/drawbridge"
repository = "https://github.com/profianinc/drawbridge"
description = "Client library for interacting with the Drawbridge."
keywords = ["drawbridge"]

[dependencies]
# Internal dependencies
drawbridge-jose = { workspace = true }
drawbridge-type = { workspace = true }

# External dependencies
anyhow = { workspace = true, features = ["std"] }
http = { workspace = true }
mime = { workspace = true }
rustls = { workspace = true }
serde_json = { workspace = true, features = ["std"] }
ureq = { workspace = true, features = ["json", "tls"] }
url = { workspace = true, features = ["serde"] }
webpki-roots = { workspace = true }
