[package]
name = "drawbridge-hash"
version = "0.1.0"
authors = ["Profian Inc"]
edition = "2021"

[dependencies]
# Internal dependencies

# External dependencies
base64 = "0.13.0"
serde = "1.0.136"
sha2 = "0.10.2"
futures = "0.3.21"

[dev-dependencies]
tokio = { version = "1.8.0", features = ["macros", "rt"] }
