[package]
name = "drawbridge-hash"
version = "0.1.0"
authors = ["Profian Inc"]
edition = "2021"

[dependencies]
# Internal dependencies

# External dependencies
base64 = { version = "0.13.0", default-features = false, features = ["std"] }
serde = { version = "1.0.136", default-features = false, features = ["std"] }
sha2 = { version = "0.10.2", default-features = false }
futures = { version = "0.3.21", default-features = false, features = ["std"] }

[dev-dependencies]
tokio = { version = "1.17.0", default-features = false, features = ["macros", "rt"] }
