[package]
name = "drawbridge-hash"
version = "0.1.0"
authors = ["Profian Inc"]
edition = "2021"
license = "AGPL-3.0-or-later"
homepage = "https://github.com/profianinc/drawbridge"
repository = "https://github.com/profianinc/drawbridge"
description = "Content digest utilities."
keywords = ["drawbridge"]

[dependencies]
# Internal dependencies

# External dependencies
base64 = { version = "0.13.0", default-features = false, features = ["std"] }
serde = { version = "1.0.136", default-features = false, features = ["std"] }
sha2 = { version = "0.10.2", default-features = false }
futures = { version = "0.3.21", default-features = false, features = ["std"] }

[dev-dependencies]
async-std = { version = "1.11.0", default-features = false, features = ["attributes", "default"] }
