[package]
name = "drawbridge-http"
version = "0.1.0"
authors = ["Profian Inc"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.52"
http-types = "2.12.0"
serde = "1.0.136"
serde_json = "1.0.79"
mime = "0.3.16"
