[package]
name = "drawbridge-jose"
version = "0.2.0"
authors = ["Profian Inc"]
edition = "2021"
license = "AGPL-3.0-or-later"
homepage = "https://github.com/profianinc/drawbridge"
repository = "https://github.com/profianinc/drawbridge"
description = "JOSE implementation"
keywords = ["drawbridge"]

[dependencies]
# Internal dependencies
drawbridge-byte = { path = "../byte", version = "0.2.0", features = ["serde"] }

# External dependencies
serde = { version = "1.0.147", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.87", default-features = false, features = ["std"] }
url = { version = "2.2.2", default-features = false, features = ["serde"] }
zeroize = { version = "1.5.5", default-features = false, features = ["alloc"] }
mediatype = { version = "0.19.2", default-features = false, features = ["serde"] }
