[package]
name = "drawbridge-jose"
version = "0.4.0"
authors = ["Profian Inc"]
edition = "2021"
license = "AGPL-3.0-or-later"
homepage = "https://github.com/profianinc/drawbridge"
repository = "https://github.com/profianinc/drawbridge"
description = "JOSE implementation"
keywords = ["drawbridge"]

[dependencies]
# Internal dependencies
drawbridge-byte = { workspace = true, features = ["serde"] }

# External dependencies
mediatype = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["std"] }
url = { workspace = true, features = ["serde"] }
zeroize = { workspace = true, features = ["alloc"] }
