[package]
name = "drawbridge-repo"
version = "0.1.0"
authors = ["Profian Inc"]
edition = "2021"

[dependencies]
# Internal dependencies
drawbridge-store = { path = "../store" }
drawbridge-tags = { path = "../tags" }
drawbridge-tree = { path = "../tree" }
drawbridge-type = { path = "../type" }

# External dependencies
axum = { version = "0.5.3" }
futures = { version = "0.3.21" }
tokio = { version = "1.17.0" }
tower = { version = "0.4.12" }
