[package]
name = "drawbridge-server"
version = "0.2.2"
authors = ["Profian Inc"]
edition = "2021"
license = "AGPL-3.0-or-later"
homepage = "https://github.com/profianinc/drawbridge"
repository = "https://github.com/profianinc/drawbridge"
description = "Drawbridge server application."
keywords = ["drawbridge"]

[dependencies]
# Internal dependencies
drawbridge-jose = { path = "../jose", version = "0.2.0" }
drawbridge-type = { path = "../type", version = "0.2.0", features = ["server"] }

# External dependencies
anyhow = { version = "1.0.65", default-features = false, features = ["std"] }
async-std = { version = "1.11.0", default-features = false }
axum = { version = "0.5.17", default-features = false, features = ["json"] }
camino = { version = "1.0.9", default-features = false }
cap-async-std = { version = "0.24.4", default-features = true, features = ["fs_utf8"] }
futures = { version = "0.3.21", default-features = false, features = ["async-await"] }
futures-rustls = { version = "0.22.1", default-features = false }
hyper = { version = "0.14.18", default-features = false, features = ["http1", "server"] }
tracing = { version = "0.1.37", default-features = false, features = ["release_max_level_debug"] }
mime = { version = "0.3.16", default-features = false }
once_cell = { version = "1.13.0", default-features = false }
openidconnect = { version = "2.3.1", default-features = false, features = ["ureq"] }
rustls = { version = "0.20.6", default-features = false }
rustls-pemfile = { version = "1.0.0", default-features = false }
semver = { version = "1.0.12", default-features = false }
serde = { version = "1.0.147", default-features = false }
serde_json = { version = "1.0.87", default-features = false, features = ["std"] }
tokio-util = { version = "0.7.3", default-features = false, features = ["compat"] }
tower = { version = "0.4.12", default-features = false }
tower-http = { version = "^0.3.0", features = ["trace"] }
uuid = { version = "1.1.2", default-features = false, features = ["v4"] }
