[package]
name = "drawbridge-server"
version = "0.4.2"
authors = ["Profian Inc", "The Enarx Project Developers"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/enarx/drawbridge"
repository = "https://github.com/enarx/drawbridge"
description = "Drawbridge server application."
keywords = ["drawbridge"]

[dependencies]
# Internal dependencies
drawbridge-jose = { workspace = true }
drawbridge-type = { workspace = true, features = ["server"] }

# External dependencies
anyhow = { workspace = true, features = ["std"] }
async-std = { workspace = true }
axum = { workspace = true, features = ["json"] }
camino = { workspace = true }
cap-async-std = { workspace = true, features = ["fs_utf8"] }
futures = { workspace = true, features = ["async-await"] }
futures-rustls = { workspace = true }
hyper = { workspace = true, features = ["http1", "server"] }
jsonwebtoken = { workspace = true }
mime = { workspace = true }
once_cell = { workspace = true }
openidconnect = { workspace = true, features = ["ureq"] }
rustls = { workspace = true, features = ["ring"] }
rustls-pemfile = { workspace = true, features = ["std"] }
rustls-pki-types = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["std"] }
tokio-util = { workspace = true, features = ["compat"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["trace"] }
tracing = { workspace = true }
uuid = { workspace = true }
