[package]
name = "drawbridge-store"
version = "0.1.0"
authors = ["Profian Inc"]
edition = "2021"

[dependencies]
# Internal Dependencies
drawbridge-type = { path = "../type" }

# External Dependencies
async-trait = "0.1.53"
futures = { version = "0.3.21", features = ["io-compat"] }
mime = "0.3.16"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1.17.0" }

[dev-dependencies]
tokio = { version = "1.17.0", features = ["macros", "rt"] }
