[package]
name = "drawbridge-store"
version = "0.1.0"
authors = ["Profian Inc"]
edition = "2021"

[dependencies]
# Internal dependencies
drawbridge-type = { path = "../type" }

# External dependencies
anyhow = { version = "1.0", default-features = false, features = ["std"] }
async-trait = { version = "0.1.53", default-features = false }
cap-async-std = { version = "0.24.4", default-features = true, features = ["tokio1"] }
futures = { version = "0.3.21", default-features = false }
mime = { version = "0.3.16", default-features = false }
serde = { version = "1.0.136", default-features = false }
serde_json = { version = "1.0.79", default-features = false, features = ["std"] }
tokio = { version = "1.17.0", default-features = false }

[dev-dependencies]
tempdir = { version = "0.3", default-features = false }
tokio = { version = "1.17.0", default-features = false, features = ["macros", "rt"] }
