[package]
name = "drawbridge-tags"
version = "0.1.0"
authors = ["Profian Inc"]
edition = "2021"

[dependencies]
# Internal Dependencies
drawbridge-hash = { path = "../hash" }
drawbridge-jose = { path = "../jose" }
drawbridge-store = { path = "../store" }
drawbridge-tree = { path = "../tree" }
drawbridge-type = { path = "../type" , features = ["server"]}

axum = "0.5.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
semver = { version = "1.0.6", features = ["serde"] }
tokio = { version = "1.17.0" }
tokio-util = { version = "0.7.1", features = ["io"] }
futures = { version = "0.3.21", features = ["io-compat"] }

[dev-dependencies]
tokio = { version = "1.17.0", features = ["macros", "rt"] }
