[package]
name = "drawbridge-tree"
version = "0.1.0"
authors = ["Profian Inc"]
edition = "2021"

[dependencies]
# Internal Dependencies
drawbridge-hash = { path = "../hash" }
drawbridge-http = { path = "../http" }

# External Dependencies
async-std = { version = "1.8.0", features = ["attributes"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tempfile = "3.3.0"
