[package]
name = "drawbridge-tree"
version = "0.1.0"
authors = ["Profian Inc"]
edition = "2021"

[dependencies]
# Internal dependencies
drawbridge-type = { path = "../type" , features = ["server"]}
drawbridge-hash = { path = "../hash" }

# External dependencies
axum = { version = "0.5.0", default-features = false, features = ["headers"] }
tokio = { version = "1.17.0" }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
futures = "0.3.21"

[dev-dependencies]
tokio = { version = "1.17.0", features = ["macros", "rt"]}
