[package]
name = "drawbridge-tree"
version = "0.1.0"
authors = ["Profian Inc"]
edition = "2021"

[dependencies]
# Internal Dependencies
drawbridge-hash = { path = "../hash" }
drawbridge-store = { path = "../store" }
drawbridge-type = { path = "../type" , features = ["server"]}

# External Dependencies
axum = { version = "0.5.0", default-features = false, features = ["headers"] }
futures = "0.3.21"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1.17.0" }

[dev-dependencies]
tokio = { version = "1.17.0", features = ["macros", "rt"]}
