[package]
name = "drawbridge-type"
version = "0.2.2"
authors = ["Profian Inc"]
edition = "2021"
license = "AGPL-3.0-or-later"
homepage = "https://github.com/profianinc/drawbridge"
repository = "https://github.com/profianinc/drawbridge"
description = "Drawbridge type definitions."
keywords = ["drawbridge"]

[dependencies]
# Internal dependencies
drawbridge-byte = { path = "../byte", version = "0.2.0" }
drawbridge-jose = { path = "../jose", version = "0.2.0" }

# External dependencies
anyhow = { version = "1.0.66", default-features = false, features = ["std"] }
base64 = { version = "0.13.0", default-features = false, features = ["std"] }
futures = { version = "0.3.21", default-features = false, features = ["std"] }
mime = { version = "0.3.16", default-features = false }
semver = { version = "1.0.9", default-features = false, features = ["serde", "std"] }
serde = { version = "1.0.136", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.87", default-features = false, features = ["std"] }
sha2 = { version = "0.10.2", default-features = false, features = ["std"] }
walkdir = { version = "2.3.2", default-features = false }

axum = { version = "0.5.17", default-features = false, features = ["headers", "json"], optional = true }
headers = { version = "0.3.7", default-features = false, optional = true }

[dev-dependencies]
async-std = { version = "1.11.0", default-features = false, features = ["attributes", "default"] }
tempfile = { version = "3.3.0", default-features = false }

[features]
default = []
server = ["axum", "futures/async-await", "headers"]
